--- a/Avalonia/ADIN.Avalonia/Views/LinkPropertiesView.axaml
+++ b/Avalonia/ADIN.Avalonia/Views/LinkPropertiesView.axaml
@@ -14,29 +14,21 @@
 					<HmcCard Grid.Column="0" Margin="8" Density="High" Header="Active Phy Mode">
 						<TextBlock Text="{Binding ActivePhyMode}" Classes="title xs"/>
 					</HmcCard>
-					<!--Copper Media-->
-					<HmcCard Grid.Column="1" Margin="8" Density="High" Header="MAC Interface" IsVisible="{Binding IsCopperMedia}">
+					<!--Copper/Fiber Media-->
+					<HmcCard Grid.Column="1" Margin="8" Density="High" Header="MAC Interface" IsVisible="{Binding IsCopperFiberMedia}">
 						<StackPanel Orientation="Horizontal">
 							<HmcSegmentedButton Size="sm" GroupName="MAC" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsMacInt_RGMII}" Content="RGMII"/>
 							<HmcSegmentedButton Size="sm" GroupName="MAC" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsMacInt_RMII}" Content="RMII"/>
 							<HmcSegmentedButton Size="sm" GroupName="MAC" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsMacInt_MII}" Content="MII"/>
-							<HmcSegmentedButton Size="sm" GroupName="MAC" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsMacInt_SGMII}" Content="SGMII"/>
-						</StackPanel>
-					</HmcCard>
-					<!--Fiber Media-->
-					<HmcCard Grid.Column="1" Margin="8" Density="High" Header="MAC Interface" IsVisible="{Binding IsFiberMedia}">
-						<StackPanel Orientation="Horizontal">
-							<HmcSegmentedButton Size="sm" GroupName="MAC" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsMacInt_RGMII}" Content="RGMII"/>
-							<HmcSegmentedButton Size="sm" GroupName="MAC" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsMacInt_RMII}" Content="RMII"/>
-							<HmcSegmentedButton Size="sm" GroupName="MAC" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsMacInt_MII}" Content="MII"/>
+							<HmcSegmentedButton Size="sm" GroupName="MAC" IsEnabled="{Binding IsCopperMedia}" IsChecked="{Binding IsMacInt_SGMII}" Content="SGMII"/>
 						</StackPanel>
 					</HmcCard>
 					<!--Media Converter-->
 					<HmcCard Grid.Column="1" Margin="8" Density="High" Header="Speed Mode" IsVisible="{Binding IsMediaConverter}">
 						<StackPanel Orientation="Horizontal">
-							<HmcSegmentedButton Size="sm" GroupName="ConvertSpeedMode" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsEDPD_Disabled}" Content="1000BASE"/>
-							<HmcSegmentedButton Size="sm" GroupName="ConvertSpeedMode" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsEDPD_Enabled}" Content="100BASE"/>
-							<HmcSegmentedButton Size="sm" GroupName="ConvertSpeedMode" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsEDPD_Enabled}" Content="100BASE (Autoneg Disabled)"/>
+							<HmcSegmentedButton Size="sm" GroupName="ConvertSpeedMode" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding }" Content="1000BASE"/>
+							<HmcSegmentedButton Size="sm" GroupName="ConvertSpeedMode" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding }" Content="100BASE"/>
+							<HmcSegmentedButton Size="sm" GroupName="ConvertSpeedMode" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding }" Content="100BASE (Autoneg Disabled)"/>
 						</StackPanel>
 					</HmcCard>
 				</Grid>
@@ -91,28 +83,6 @@
 							<HmcSegmentedButton Size="sm" GroupName="ForcedSpeed" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsForcedSpeed_10BASE_T_HD}" Content="10BASE-T HD"/>
 						</StackPanel>
 					</HmcCard>
-					<HmcCard Grid.Column="2" Margin="8" Density="High" Header="Energy Detect Power-down Mode">
-						<StackPanel Orientation="Horizontal">
-							<HmcSegmentedButton Size="sm" GroupName="EDPD" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsEDPD_Disabled}" Content="Disabled"/>
-							<HmcSegmentedButton Size="sm" GroupName="EDPD" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsEDPD_Enabled}" Content="Enabled"/>
-							<HmcSegmentedButton Size="sm" GroupName="EDPD" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsEDPD_EnabledWithPeriodicPulseTx}" Content="Enabled with Periodic Pulse TX"/>
-						</StackPanel>
-					</HmcCard>
-					<Grid ColumnDefinitions="*,Auto">
-						<HmcCard Grid.Column="0" Margin="8" Density="High" Header="MDIX">
-							<StackPanel Orientation="Horizontal">
-								<HmcSegmentedButton Size="sm" GroupName="MDIX" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsMDIX_AutoMDIX}" Content="Auto MDIX"/>
-								<HmcSegmentedButton Size="sm" GroupName="MDIX" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsMDIX_FixedMDI}" Content="Fixed MDI"/>
-								<HmcSegmentedButton Size="sm" GroupName="MDIX" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsMDIX_FixedMDIX}" Content="Fixed MDIX"/>
-							</StackPanel>
-						</HmcCard>
-						<HmcCard Grid.Column="1" Margin="8" Density="High" Header="Leader/Follower" IsVisible="{Binding IsLeaderFollowerVisible}">
-							<StackPanel Orientation="Horizontal">
-								<HmcSegmentedButton Size="sm" GroupName="LeaderFollower" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsLeaderFollower_Leader}" Content="Leader"/>
-								<HmcSegmentedButton Size="sm" GroupName="LeaderFollower" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsLeaderFollower_Follower}" Content="Follower"/>
-							</StackPanel>
-						</HmcCard>
-					</Grid>
 				</StackPanel>
 			</StackPanel>
 			
@@ -130,8 +100,8 @@
 				</HmcCard>
 			</StackPanel>
 
-			<!--Media Converter Mode-->
-			<StackPanel IsVisible="{Binding IsMediaConverter}">
+			<!--Copper/MediaConv-->
+			<StackPanel IsVisible="{Binding IsCopperMediaConv}">
 				<HmcCard Grid.Column="2" Margin="8" Density="High" Header="Energy Detect Power-down Mode">
 					<StackPanel Orientation="Horizontal">
 						<HmcSegmentedButton Size="sm" GroupName="EDPD" IsEnabled="{Binding IsDeviceSelected}" IsChecked="{Binding IsEDPD_Disabled}" Content="Disabled"/>
