--- a/02_Avalonia/ADIN.Avalonia/Views/LinkPropertiesView.axaml
+++ b/02_Avalonia/ADIN.Avalonia/Views/LinkPropertiesView.axaml
@@ -48,7 +48,7 @@
 								<Label Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Content="Advertise 1000BASE-T"/>
 								<Label Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Content="Advertise 100BASE-TX"/>
 								<Label Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" Content="Advertise 10BASE-T"/>
-								<ToggleSwitch Grid.Column="1" Grid.Row="1" OnContent="" OffContent="" HorizontalAlignment="Center" IsChecked="{Binding IsAdvertise_1000BASE_T_FD}" IsEnabled="{Binding IsSpeedCapable1G}"/>
+								<ToggleSwitch Grid.Column="1" Grid.Row="1" OnContent="" OffContent="" HorizontalAlignment="Center" IsHitTestVisible="{Binding AllowInput}" IsChecked="{Binding IsAdvertise_1000BASE_T_FD}" IsEnabled="{Binding IsSpeedCapable1G}"/>
 								<ToggleSwitch Grid.Column="2" Grid.Row="1" OnContent="" OffContent="" HorizontalAlignment="Center" IsChecked="{Binding IsAdvertise_1000BASE_T_HD}" IsEnabled="{Binding IsSpeedCapable1G}"/>
 								<ToggleSwitch Grid.Column="1" Grid.Row="2" OnContent="" OffContent="" HorizontalAlignment="Center" IsChecked="{Binding IsAdvertise_100BASE_TX_FD}"/>
 								<ToggleSwitch Grid.Column="2" Grid.Row="2" OnContent="" OffContent="" HorizontalAlignment="Center" IsChecked="{Binding IsAdvertise_100BASE_TX_HD}"/>
